# scapy-wmi

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
layers/: __init__.py  wmiclient.py
scapy_wmi/: __init__.pyi  wmiclient.py
scapy_wmi/msrpce/: mswmio.py
scapy_wmi/msrpce/raw/: ms_wmi.py
scapy_wmi/types/: wmi_classes.py
tests/: test_wmiclient.py
