[build-system]
requires = [ "setuptools>=77.0.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "scapy-wmi"
version = "0.0.4"
dynamic = ["readme"]
authors = [
    { name="Samuel MAUGER" },
]
license = "GPL-2.0-only"
requires-python = ">=3.9, <4"
description = "Scapy WMI definitions"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

[tool.setuptools.packages.find]
include = [
    "layers*",
]

[tool.black]
line-length = 88
target-version = ['py37']
extend-exclude = "ply/*"
